Closure_17/evosuite/original/evosuite-report-org/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_17_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_17/Closure/evosuite/0/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_17/Closure/evosuite/0/com/google/javascript/jscomp/TypedScopeCreator_ESTest_scaffolding.java >> evosuite-report-org/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_17/Closure/evosuite/0/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java:82: error: cannot find symbol
      typedScopeCreator0.patchGlobalScope(scope0, node0);
                        ^
  symbol:   method patchGlobalScope(Scope,Node)
  location: variable typedScopeCreator0 of type TypedScopeCreator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_17/Closure/evosuite/0/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java:116: error: cannot find symbol
      typedScopeCreator0.patchGlobalScope(scope0, node0);
                        ^
  symbol:   method patchGlobalScope(Scope,Node)
  location: variable typedScopeCreator0 of type TypedScopeCreator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_17/Closure/evosuite/0/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java:148: error: cannot find symbol
      typedScopeCreator0.patchGlobalScope(scope0, node0);
                        ^
  symbol:   method patchGlobalScope(Scope,Node)
  location: variable typedScopeCreator0 of type TypedScopeCreator
/home/liumengjiao/Desktop/CI/Evosuite/Closure_17/Closure/evosuite/0/com/google/javascript/jscomp/TypedScopeCreator_ESTest.java:251: error: cannot find symbol
      CompilerOptions compilerOptions0 = compiler0.newCompilerOptions();
                                                  ^
  symbol:   method newCompilerOptions()
  location: variable compiler0 of type Compiler
4 errors
